# agentic-flashcards

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AI_MAINTAINER_GUIDE.md
examples/: cards.json
ios/: Package.swift
ios/App/: AgenticFlashcardsApp.swift
ios/Sources/AgenticFlashcardsCore/: Models.swift  OfflineOutbox.swift
ios/Tests/AgenticFlashcardsCoreTests/: OfflineOutboxTests.swift
scripts/: privacy_check.py
src/agentic_flashcards/: __init__.py  cli.py  content.py  scheduler.py  store.py
tests/: test_content.py  test_scheduler.py  test_store.py
